--- a/app-text/yelp-tools/ChangeLog
+++ b/app-text/yelp-tools/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/yelp-tools
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/yelp-tools/ChangeLog,v 1.6 2012/05/06 08:19:33 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/yelp-tools/ChangeLog,v 1.7 2012/10/03 10:29:44 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> yelp-tools-3.4.1.ebuild:
+  x86 stable wrt bug #427544
 
 *yelp-tools-3.4.1 (06 May 2012)
 
