--- a/net-dialup/freeradius/ChangeLog
+++ b/net-dialup/freeradius/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/freeradius
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/freeradius/ChangeLog,v 1.107 2012/10/02 09:58:12 nativemad Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/freeradius/ChangeLog,v 1.108 2012/10/03 10:29:49 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> freeradius-2.2.0.ebuild:
+  Stable for amd64, wrt bug #434802
 
   02 Oct 2012; Andreas Schuerch <nativemad@gentoo.org> freeradius-2.2.0.ebuild:
   x86 stable, see bug 434802
