--- a/app-arch/zip/ChangeLog
+++ b/app-arch/zip/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/zip
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/zip/ChangeLog,v 1.96 2012/10/02 14:16:46 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/zip/ChangeLog,v 1.97 2012/10/03 10:30:14 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> zip-3.0-r1.ebuild:
+  Stable for amd64, wrt bug #436436
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> zip-3.0-r1.ebuild:
   Stable for HPPA (bug #436436).
