--- a/net-misc/connect/ChangeLog
+++ b/net-misc/connect/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/connect
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/connect/ChangeLog,v 1.8 2009/09/23 19:35:04 patrick Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/connect/ChangeLog,v 1.9 2012/10/03 10:31:04 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> connect-100.ebuild:
+  Stable for amd64, wrt bug #384471
 
   23 Sep 2009; Patrick Lauer <patrick@gentoo.org> connect-100.ebuild:
   Remove virtual/libc
