--- a/sci-mathematics/gmm/ChangeLog
+++ b/sci-mathematics/gmm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-mathematics/gmm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gmm/ChangeLog,v 1.26 2012/09/26 17:33:04 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gmm/ChangeLog,v 1.27 2012/10/03 10:31:41 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gmm-4.2.ebuild:
+  Stable for amd64, wrt bug #436318
 
   26 Sep 2012; Jeroen Roovers <jer@gentoo.org> gmm-4.1.ebuild:
   Marked ~hppa (bug #436318).
