--- a/dev-ruby/term-ansicolor/ChangeLog
+++ b/dev-ruby/term-ansicolor/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/term-ansicolor
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/term-ansicolor/ChangeLog,v 1.26 2012/08/16 18:22:25 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/term-ansicolor/ChangeLog,v 1.27 2012/10/03 10:37:40 blueness Exp $
+
+  03 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  term-ansicolor-1.0.7.ebuild:
+  stable ppc ppc64, bug #437040
 
   16 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org>
   -term-ansicolor-1.0.6.ebuild, term-ansicolor-1.0.7.ebuild:
