--- a/dev-libs/btparser/ChangeLog
+++ b/dev-libs/btparser/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/btparser
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/btparser/ChangeLog,v 1.9 2012/09/29 10:40:04 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/btparser/ChangeLog,v 1.10 2012/10/03 10:48:45 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> btparser-0.17.ebuild:
+  x86 stable wrt bug #427544
 
 *btparser-0.19 (29 Sep 2012)
 
