--- a/dev-libs/libreport/ChangeLog
+++ b/dev-libs/libreport/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libreport
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libreport/ChangeLog,v 1.13 2012/09/22 20:12:48 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libreport/ChangeLog,v 1.14 2012/10/03 10:53:51 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libreport-2.0.10.ebuild:
+  x86 stable wrt bug #427544
 
 *libreport-2.0.13 (22 Sep 2012)
 
