--- a/dev-libs/link-grammar/ChangeLog
+++ b/dev-libs/link-grammar/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/link-grammar
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/ChangeLog,v 1.45 2012/10/02 15:30:48 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/ChangeLog,v 1.46 2012/10/03 10:54:23 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  link-grammar-4.7.6.ebuild:
+  x86 stable wrt bug #427544
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> link-grammar-4.7.6.ebuild:
   Stable for HPPA (bug #427544).
