--- a/dev-util/devhelp/ChangeLog
+++ b/dev-util/devhelp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/devhelp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/devhelp/ChangeLog,v 1.137 2012/07/15 18:38:42 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/devhelp/ChangeLog,v 1.138 2012/10/03 10:57:33 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> devhelp-3.4.1.ebuild:
+  x86 stable wrt bug #427544
 
   15 Jul 2012; Raúl Porcel <armin76@gentoo.org> devhelp-3.2.0.ebuild:
   sparc stable wrt #410611
