--- a/app-cdr/k3b/ChangeLog
+++ b/app-cdr/k3b/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-cdr/k3b
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.277 2012/10/03 10:27:18 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/k3b/ChangeLog,v 1.278 2012/10/03 11:08:24 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> -k3b-2.0.2-r1.ebuild,
+  -k3b-2.0.2-r3.ebuild:
+  Remove old
 
   03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> k3b-2.0.2-r4.ebuild:
   Stable for amd64, wrt bug #436326
