--- a/net-analyzer/nrpe/ChangeLog
+++ b/net-analyzer/nrpe/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/nrpe
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nrpe/ChangeLog,v 1.8 2012/10/02 21:06:04 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nrpe/ChangeLog,v 1.9 2012/10/03 11:19:32 blueness Exp $
+
+  03 Oct 2012; Anthony G. Basile <blueness@gentoo.org> nrpe-2.13-r4.ebuild:
+  stable ppc ppc64, bug #436738
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> nrpe-2.13-r4.ebuild:
   Stable for HPPA (bug #436738).
