--- a/dev-util/gdbus-codegen/ChangeLog
+++ b/dev-util/gdbus-codegen/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/gdbus-codegen
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gdbus-codegen/ChangeLog,v 1.31 2012/10/02 15:21:53 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gdbus-codegen/ChangeLog,v 1.32 2012/10/03 11:24:46 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gdbus-codegen-2.32.4.ebuild:
+  x86 stable wrt bug #427544
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> gdbus-codegen-2.32.4.ebuild:
   Stable for HPPA (bug #427544).
