--- a/dev-util/itstool/ChangeLog
+++ b/dev-util/itstool/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/itstool
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/itstool/ChangeLog,v 1.13 2012/09/23 06:05:06 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/itstool/ChangeLog,v 1.14 2012/10/03 11:40:09 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> itstool-1.2.0.ebuild:
+  x86 stable wrt bug #427544
 
   23 Sep 2012; Anthony G. Basile <blueness@gentoo.org> itstool-1.2.0.ebuild:
   keyword ~ppc, bug #379651
