--- a/dev-util/meld/ChangeLog
+++ b/dev-util/meld/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/meld
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/meld/ChangeLog,v 1.145 2012/07/15 17:19:22 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/meld/ChangeLog,v 1.146 2012/10/03 11:40:32 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> meld-1.6.0.ebuild:
+  x86 stable wrt bug #427544
 
   15 Jul 2012; Raúl Porcel <armin76@gentoo.org> meld-1.5.4.ebuild:
   alpha/ia64/sparc stable wrt #410611
