--- a/gnome-base/dconf/ChangeLog
+++ b/gnome-base/dconf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/dconf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/dconf/ChangeLog,v 1.34 2012/09/27 22:59:19 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/dconf/ChangeLog,v 1.35 2012/10/03 11:40:54 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> dconf-0.12.1.ebuild:
+  x86 stable wrt bug #427544
 
 *dconf-0.14.0 (27 Sep 2012)
 
