--- a/net-print/hplip/ChangeLog
+++ b/net-print/hplip/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-print/hplip
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/hplip/ChangeLog,v 1.238 2012/10/01 16:21:06 billie Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/hplip/ChangeLog,v 1.239 2012/10/03 11:46:51 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> hplip-3.12.9-r1.ebuild:
+  Stable for amd64, wrt bug #436858
 
   01 Oct 2012; Daniel Pielmeier <billie@gentoo.org> -hplip-3.12.6-r1.ebuild,
   -hplip-3.12.9.ebuild:
