--- a/net-dns/dnsmasq/ChangeLog
+++ b/net-dns/dnsmasq/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/dnsmasq
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.224 2012/10/02 14:12:26 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/dnsmasq/ChangeLog,v 1.225 2012/10/03 11:47:39 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> dnsmasq-2.63.ebuild:
+  Stable for amd64, wrt bug #436894
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> dnsmasq-2.63.ebuild:
   Stable for HPPA (bug #436894).
