--- a/dev-ruby/term-ansicolor/ChangeLog
+++ b/dev-ruby/term-ansicolor/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/term-ansicolor
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/term-ansicolor/ChangeLog,v 1.27 2012/10/03 10:37:40 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/term-ansicolor/ChangeLog,v 1.28 2012/10/03 12:51:00 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> term-ansicolor-1.0.7.ebuild:
+  Stable for amd64, wrt bug #437040
 
   03 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   term-ansicolor-1.0.7.ebuild:
