--- a/app-text/build-docbook-catalog/ChangeLog
+++ b/app-text/build-docbook-catalog/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/build-docbook-catalog
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/build-docbook-catalog/ChangeLog,v 1.31 2012/10/02 23:18:15 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/build-docbook-catalog/ChangeLog,v 1.32 2012/10/03 12:51:24 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
+  build-docbook-catalog-1.19.1.ebuild:
+  Stable for amd64, wrt bug #437024
 
 *build-docbook-catalog-1.19.1 (02 Oct 2012)
 
