--- a/net-misc/youtube-dl/ChangeLog
+++ b/net-misc/youtube-dl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/youtube-dl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.119 2012/10/02 17:13:19 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.120 2012/10/03 12:57:36 pinkbyte Exp $
+
+  03 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> youtube-dl-2012.09.27.ebuild:
+  Stable for amd64 wrt bug #436464
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> youtube-dl-2012.09.27.ebuild:
   Stable for HPPA (bug #436464).
