--- a/app-forensics/air/ChangeLog
+++ b/app-forensics/air/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-forensics/air
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-forensics/air/ChangeLog,v 1.20 2012/09/08 02:18:05 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-forensics/air/ChangeLog,v 1.21 2012/10/03 15:00:26 pinkbyte Exp $
+
+*air-2.0.0-r1 (03 Oct 2012)
+
+  03 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> +air-2.0.0-r1.ebuild:
+  Revision bump. Fixes bug #410525, thanks to Ian Delaney. Also contains a lot
+  of enhancements, described in bug's comments
 
   08 Sep 2012; Tim Harder <radhermit@gentoo.org> metadata.xml:
   Remove redundant maintainer from metadata.
