--- a/gnome-extra/gtkhtml/ChangeLog
+++ b/gnome-extra/gtkhtml/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/gtkhtml
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gtkhtml/ChangeLog,v 1.258 2012/08/13 04:11:26 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gtkhtml/ChangeLog,v 1.259 2012/10/03 15:20:51 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gtkhtml-4.4.3.ebuild:
+  x86 stable wrt bug #427544
 
 *gtkhtml-4.4.4 (13 Aug 2012)
 
