--- a/gnome-extra/gucharmap/ChangeLog
+++ b/gnome-extra/gucharmap/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/gucharmap
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gucharmap/ChangeLog,v 1.177 2012/07/15 16:26:09 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gucharmap/ChangeLog,v 1.178 2012/10/03 15:21:10 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gucharmap-3.4.1.1.ebuild:
+  x86 stable wrt bug #427544
 
   15 Jul 2012; Raúl Porcel <armin76@gentoo.org> gucharmap-3.0.1-r200.ebuild,
   gucharmap-3.2.2.ebuild:
