--- a/gnome-extra/libgda/ChangeLog
+++ b/gnome-extra/libgda/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/libgda
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgda/ChangeLog,v 1.206 2012/09/20 07:35:36 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgda/ChangeLog,v 1.207 2012/10/03 15:21:56 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libgda-4.2.13.ebuild:
+  x86 stable wrt bug #427544
 
   20 Sep 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   files/libgda-4.99.1-control-center-icon-collision.patch,
