--- a/gnome-extra/yelp-xsl/ChangeLog
+++ b/gnome-extra/yelp-xsl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-extra/yelp-xsl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/yelp-xsl/ChangeLog,v 1.7 2012/05/20 00:08:56 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/yelp-xsl/ChangeLog,v 1.8 2012/10/03 15:22:34 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> yelp-xsl-3.4.2.ebuild:
+  x86 stable wrt bug #427544
 
 *yelp-xsl-3.4.2 (20 May 2012)
 
