--- a/net-analyzer/wireshark/ChangeLog
+++ b/net-analyzer/wireshark/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/wireshark
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.402 2012/10/02 23:45:42 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/wireshark/ChangeLog,v 1.403 2012/10/03 15:24:07 jer Exp $
+
+  03 Oct 2012; Jeroen Roovers <jer@gentoo.org> wireshark-1.8.3.ebuild,
+  +files/wireshark-1.8.3-dtls-sctp.patch:
+  Add upstream patch (bug #437032).
 
 *wireshark-1.8.3 (02 Oct 2012)
 *wireshark-1.6.11 (02 Oct 2012)
