--- a/media-gfx/gphoto2/ChangeLog
+++ b/media-gfx/gphoto2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/gphoto2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gphoto2/ChangeLog,v 1.124 2012/10/02 15:45:18 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gphoto2/ChangeLog,v 1.125 2012/10/03 15:23:32 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gphoto2-2.4.14.ebuild:
+  x86 stable wrt bug #427544
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> gphoto2-2.4.14.ebuild:
   Stable for HPPA (bug #427544).
