--- a/media-gfx/gthumb/ChangeLog
+++ b/media-gfx/gthumb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/gthumb
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gthumb/ChangeLog,v 1.152 2012/08/21 04:34:30 ottxor Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gthumb/ChangeLog,v 1.153 2012/10/03 15:24:09 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gthumb-2.14.4.ebuild:
+  x86 stable wrt bug #427544
 
   21 Aug 2012; Christoph Junghans <ottxor@gentoo.org> gthumb-3.0.0.ebuild:
   added prefix keywords
