--- a/media-gfx/simple-scan/ChangeLog
+++ b/media-gfx/simple-scan/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/simple-scan
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/simple-scan/ChangeLog,v 1.17 2012/07/17 06:53:57 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/simple-scan/ChangeLog,v 1.18 2012/10/03 15:24:26 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  simple-scan-3.4.2.ebuild:
+  x86 stable wrt bug #427544
 
 *simple-scan-3.4.2 (17 Jul 2012)
 
