--- a/media-libs/grilo/ChangeLog
+++ b/media-libs/grilo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/grilo
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/grilo/ChangeLog,v 1.8 2012/09/16 02:48:00 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/grilo/ChangeLog,v 1.9 2012/10/03 15:24:40 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> grilo-0.1.18-r1.ebuild:
+  x86 stable wrt bug #427544
 
 *grilo-0.2.0-r1 (16 Sep 2012)
 *grilo-0.1.20 (16 Sep 2012)
