--- a/media-libs/libgphoto2/ChangeLog
+++ b/media-libs/libgphoto2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libgphoto2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.215 2012/10/02 15:44:48 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.216 2012/10/03 15:25:17 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  libgphoto2-2.4.14.ebuild:
+  x86 stable wrt bug #427544
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> libgphoto2-2.4.14.ebuild:
   Stable for HPPA (bug #427544).
