--- a/media-plugins/grilo-plugins/ChangeLog
+++ b/media-plugins/grilo-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/grilo-plugins
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/grilo-plugins/ChangeLog,v 1.10 2012/09/29 17:05:49 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/grilo-plugins/ChangeLog,v 1.11 2012/10/03 15:25:38 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  grilo-plugins-0.1.18.ebuild:
+  x86 stable wrt bug #427544
 
   29 Sep 2012; Pacho Ramos <pacho@gentoo.org> grilo-plugins-0.1.18.ebuild:
   Drop tracker support for version to stabilize as tracker is still not ready
