--- a/net-dialup/moserial/ChangeLog
+++ b/net-dialup/moserial/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/moserial
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/moserial/ChangeLog,v 1.20 2012/06/16 10:39:43 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/moserial/ChangeLog,v 1.21 2012/10/03 15:26:01 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> moserial-3.0.7.ebuild:
+  x86 stable wrt bug #427544
 
 *moserial-3.0.7 (16 Jun 2012)
 
