--- a/app-pda/barry/ChangeLog
+++ b/app-pda/barry/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-pda/barry
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/barry/ChangeLog,v 1.23 2012/08/11 16:45:51 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/barry/ChangeLog,v 1.24 2012/10/03 15:39:00 ssuominen Exp $
+
+  03 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> barry-0.17.1-r1.ebuild,
+  +files/barry-0.17.1-gcc47.patch:
+  Fix building with sys-devel/gcc >= 4.7.0 wrt #; #425432. Thanks to Ben Kohler
+  and Diego Elio Pettenò.
 
 *barry-0.17.1-r1 (11 Aug 2012)
 
