x86 stable wrt bug #427544
Package-Manager: portage-2.1.11.9/cvs/Linux i686

--- a/net-im/telepathy-mission-control/ChangeLog
+++ b/net-im/telepathy-mission-control/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/telepathy-mission-control
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-mission-control/ChangeLog,v 1.73 2012/09/22 09:32:38 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-mission-control/ChangeLog,v 1.74 2012/10/03 15:39:26 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  telepathy-mission-control-5.12.3.ebuild:
+  x86 stable wrt bug #427544
 
 *telepathy-mission-control-5.12.3 (22 Sep 2012)
 
