--- a/net-im/gajim/ChangeLog
+++ b/net-im/gajim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gajim
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.151 2012/09/30 17:57:59 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gajim/ChangeLog,v 1.152 2012/10/03 15:38:59 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gajim-0.15.1.ebuild:
+  x86 stable wrt bug #427544
 
   30 Sep 2012; Agostino Sarubbo <ago@gentoo.org> -gajim-0.15-r1.ebuild:
   Remove old
