--- a/net-im/telepathy-logger/ChangeLog
+++ b/net-im/telepathy-logger/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-im/telepathy-logger
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-logger/ChangeLog,v 1.39 2012/07/15 18:09:22 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-logger/ChangeLog,v 1.40 2012/10/03 15:39:13 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  telepathy-logger-0.4.0.ebuild:
+  x86 stable wrt bug #427544
 
   15 Jul 2012; Raúl Porcel <armin76@gentoo.org>
   telepathy-logger-0.2.12-r1.ebuild:
