--- a/net-libs/libnice/ChangeLog
+++ b/net-libs/libnice/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libnice
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libnice/ChangeLog,v 1.35 2012/10/02 15:52:56 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libnice/ChangeLog,v 1.36 2012/10/03 15:42:03 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libnice-0.1.2.ebuild:
+  x86 stable wrt bug #427544
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> libnice-0.1.2.ebuild:
   Stable for HPPA (bug #427544).
