--- a/net-libs/glib-networking/ChangeLog
+++ b/net-libs/glib-networking/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/glib-networking
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/glib-networking/ChangeLog,v 1.46 2012/10/02 15:52:04 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/glib-networking/ChangeLog,v 1.47 2012/10/03 15:40:34 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  glib-networking-2.32.3.ebuild:
+  x86 stable wrt bug #427544
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> glib-networking-2.32.3.ebuild:
   Stable for HPPA (bug #427544).
