--- a/net-libs/libdmapsharing/ChangeLog
+++ b/net-libs/libdmapsharing/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libdmapsharing
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libdmapsharing/ChangeLog,v 1.5 2012/05/03 23:43:53 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libdmapsharing/ChangeLog,v 1.6 2012/10/03 15:41:33 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  libdmapsharing-2.1.13.ebuild:
+  x86 stable wrt bug #427544
 
 *libdmapsharing-2.9.15 (03 May 2012)
 
