--- a/net-libs/libsoup-gnome/ChangeLog
+++ b/net-libs/libsoup-gnome/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libsoup-gnome
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libsoup-gnome/ChangeLog,v 1.73 2012/05/16 00:14:20 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libsoup-gnome/ChangeLog,v 1.74 2012/10/03 15:42:16 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  libsoup-gnome-2.38.1.ebuild:
+  x86 stable wrt bug #427544
 
   16 May 2012; Alexis Ballier <aballier@gentoo.org>
   libsoup-gnome-2.38.1.ebuild:
