--- a/net-libs/libsoup/ChangeLog
+++ b/net-libs/libsoup/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libsoup
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libsoup/ChangeLog,v 1.285 2012/10/02 15:37:34 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libsoup/ChangeLog,v 1.286 2012/10/03 15:42:33 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libsoup-2.38.1.ebuild:
+  x86 stable wrt bug #427544
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> libsoup-2.38.1.ebuild:
   Stable for HPPA (bug #427544).
