--- a/net-libs/telepathy-glib/ChangeLog
+++ b/net-libs/telepathy-glib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/telepathy-glib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/telepathy-glib/ChangeLog,v 1.116 2012/09/16 00:15:03 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/telepathy-glib/ChangeLog,v 1.117 2012/10/03 15:42:46 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  telepathy-glib-0.18.1.ebuild:
+  x86 stable wrt bug #427544
 
   16 Sep 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   telepathy-glib-0.18.2.ebuild:
