--- a/x11-libs/gnome-pty-helper/ChangeLog
+++ b/x11-libs/gnome-pty-helper/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/gnome-pty-helper
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gnome-pty-helper/ChangeLog,v 1.14 2012/10/02 15:38:36 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gnome-pty-helper/ChangeLog,v 1.15 2012/10/03 15:45:45 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gnome-pty-helper-0.32.2.ebuild:
+  x86 stable wrt bug #427544
 
   02 Oct 2012; Jeroen Roovers <jer@gentoo.org> gnome-pty-helper-0.32.2.ebuild:
   Stable for HPPA (bug #427544).
