--- a/x11-themes/gtk-engines-unico/ChangeLog
+++ b/x11-themes/gtk-engines-unico/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-engines-unico
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-unico/ChangeLog,v 1.6 2012/05/20 19:39:15 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-unico/ChangeLog,v 1.7 2012/10/04 07:41:46 phajdan.jr Exp $
+
+  04 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gtk-engines-unico-1.0.2.ebuild:
+  x86 stable wrt bug #427544
 
   20 May 2012; Samuli Suominen <ssuominen@gentoo.org>
   gtk-engines-unico-1.0.2.ebuild:
