Add ~x86-fbsd wrt bug #428356
Package-Manager: portage-2.2.0_alpha134/cvs/Linux x86_64

--- a/net-print/cups/ChangeLog
+++ b/net-print/cups/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-print/cups
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.511 2012/09/21 09:43:02 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.512 2012/10/04 08:07:30 naota Exp $
+
+  04 Oct 2012;  <naota@gentoo.org> cups-1.6.1.ebuild:
+  Add ~x86-fbsd wrt bug #428356
 
   21 Sep 2012; Anthony G. Basile <blueness@gentoo.org> cups-9999.ebuild:
   Keyword ~ppc64, bug #428356
