--- a/net-print/cups-filters/ChangeLog
+++ b/net-print/cups-filters/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-print/cups-filters
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups-filters/ChangeLog,v 1.42 2012/09/28 18:40:11 tgurr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups-filters/ChangeLog,v 1.43 2012/10/04 08:08:12 naota Exp $
+
+  04 Oct 2012;  <naota@gentoo.org> cups-filters-1.0.24.ebuild:
+  Add ~x86-fbsd wrt bug #428356
 
   28 Sep 2012; Timo Gurr <tgurr@gentoo.org> cups-filters-1.0.24.ebuild,
   +files/cups-filters-1.0.24-rev7009.diff:
