--- a/dev-cpp/glibmm/ChangeLog
+++ b/dev-cpp/glibmm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/glibmm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/glibmm/ChangeLog,v 1.188 2012/10/03 10:30:23 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/glibmm/ChangeLog,v 1.189 2012/10/04 14:46:40 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> glibmm-2.32.1.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> glibmm-2.32.1.ebuild:
   x86 stable wrt bug #427544
