--- a/dev-libs/btparser/ChangeLog
+++ b/dev-libs/btparser/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/btparser
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/btparser/ChangeLog,v 1.10 2012/10/03 10:48:45 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/btparser/ChangeLog,v 1.11 2012/10/04 14:47:35 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> btparser-0.17.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> btparser-0.17.ebuild:
   x86 stable wrt bug #427544
