--- a/dev-libs/gdl/ChangeLog
+++ b/dev-libs/gdl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/gdl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gdl/ChangeLog,v 1.76 2012/10/03 10:49:10 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gdl/ChangeLog,v 1.77 2012/10/04 14:47:51 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gdl-3.4.2.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gdl-3.4.2.ebuild:
   x86 stable wrt bug #427544
