--- a/dev-libs/glib/ChangeLog
+++ b/dev-libs/glib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/glib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.539 2012/10/03 10:50:50 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.540 2012/10/04 14:48:12 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> glib-2.32.4-r1.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> glib-2.32.4-r1.ebuild:
   x86 stable wrt bug #427544
