--- a/dev-libs/gmime/ChangeLog
+++ b/dev-libs/gmime/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/gmime
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.204 2012/10/03 10:51:35 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gmime/ChangeLog,v 1.205 2012/10/04 14:48:31 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gmime-2.6.10.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gmime-2.6.10.ebuild:
   x86 stable wrt bug #427544
