--- a/dev-libs/libreport/ChangeLog
+++ b/dev-libs/libreport/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libreport
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libreport/ChangeLog,v 1.14 2012/10/03 10:53:51 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libreport/ChangeLog,v 1.15 2012/10/04 14:49:28 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libreport-2.0.10.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libreport-2.0.10.ebuild:
   x86 stable wrt bug #427544
