--- a/dev-libs/link-grammar/ChangeLog
+++ b/dev-libs/link-grammar/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/link-grammar
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/ChangeLog,v 1.46 2012/10/03 10:54:23 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/link-grammar/ChangeLog,v 1.47 2012/10/04 14:49:43 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> link-grammar-4.7.6.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   link-grammar-4.7.6.ebuild:
