--- a/media-libs/libcanberra/ChangeLog
+++ b/media-libs/libcanberra/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libcanberra
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcanberra/ChangeLog,v 1.86 2012/10/03 15:24:59 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcanberra/ChangeLog,v 1.87 2012/10/04 14:56:49 ago Exp $
+
+  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libcanberra-0.29.ebuild:
+  Stable for amd64, wrt bug #427544
 
   03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libcanberra-0.29.ebuild:
   x86 stable wrt bug #427544
